Complete initial setup: add directories and personalize README

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ __pycache__/
 # - Temporary files (*.tmp, *~)
 # - Output directories (results/, output/)
 # - Any editor-specific backup files
+*.tmp
+*~
